--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -32,6 +32,7 @@
     background-color: rgba(22, 24, 35, 0.06);
     border-radius: var(--search-border-radius);
     display: flex;
+    align-items: center;
     border: 1.5px solid rgba(22, 24, 35, 0);
 
     input {
@@ -64,18 +65,24 @@
     }
 }
 
-.clear,
-.loading {
-    position: absolute;
-    right: var(--search-button-width);
-    top: 50%;
-    right: calc(var(--search-button-width) + 16px);
-    transform: translateY(-50%);
-    color: rgba(22, 24, 35, 0.35);
+.status {
+    //position: absolute;
+    height: calc(var(--search-font-size-icon) * 0.7);
+    margin: 0px 12px;
+    color: rgba(22, 24, 35, 0.2);
     font-size: calc(var(--search-font-size-icon) * 0.7);
 
     &:hover {
         cursor: pointer;
+        color: rgba(22, 24, 35, 0.4);
+    }
+
+    &:active {
+        color: rgba(22, 24, 35, 0.5);
+    }
+
+    .loading {
+        display: none;
     }
 }
 
