Update UI search bar

--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -50,6 +50,10 @@
         color: rgba(22, 24, 35, 0.7);
     }
 
+    input:not(:placeholder-shown) ~ .status .clear {
+        display: block;
+    }
+
     &::after {
         content: '';
         position: absolute;
@@ -81,7 +85,8 @@
         color: rgba(22, 24, 35, 0.5);
     }
 
-    .loading {
+    .loading,
+    .clear {
         display: none;
     }
 }
