--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -4,6 +4,7 @@
     --search-top-space: 9px;
     --search-font-size-icon: 1.3rem;
     --search-button-width: 52px;
+    --search-font-size-text: 1rem;
     width: 100%;
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
@@ -24,6 +25,12 @@
     justify-content: center;
 }
 
+.search,
+.search-result {
+    width: 361px;
+    font-size: var(--search-font-size-text);
+}
+
 .search {
     position: relative;
     width: 361px;
@@ -38,7 +45,7 @@
     input {
         height: 100%;
         color: var(--text-color);
-        font-size: 1rem;
+        font-size: var(--search-font-size-text);
         caret-color: red;
         border: none;
         outline: none;
@@ -108,4 +115,30 @@
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
     }
+}
+
+.search-title {
+    padding: 5px 12px;
+    font-size: var(--search-font-size-text);
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
+}
+
+.actions {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+
+    a + a {
+        margin-left: 5px;
+    }
+
+    button + button {
+        margin-left: 5px;
+    }
+}
+
+.custom-login {
+    cursor: pointer;
 }
