--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -142,3 +142,13 @@
 .custom-login {
     cursor: pointer;
 }
+
+.more-btn {
+    font-size: 1.8rem;
+    margin-left: 28px;
+    background: #fff;
+    padding: 2px 8px;
+    &:hover {
+        cursor: pointer;
+    }
+}
