--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -9,7 +9,10 @@
         height: 42px;
         border-radius: 0;
         font-weight: 500;
+        margin: 0;
         padding: 11px 16px;
+        line-height: 1.1rem;
+
         &:hover {
             background: rgba(22, 23, 35, 0.03);
         }
@@ -18,4 +21,27 @@
 
 .menu-popper {
     padding-bottom: 8px;
+}
+
+//Header
+.header {
+    display: flex;
+    position: relative;
+    height: 50px;
+    margin-top: -8px;
+}
+
+.back-btn {
+    width: 50px;
+    height: 100%;
+    background-color: transparent;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.header-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
