--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -12,6 +12,10 @@
         margin: 0;
         padding: 11px 16px;
         line-height: 1.1rem;
+        color: var(--text-color);
+        &.separate {
+            border-top: 1px solid rgba(22, 24, 35, 0.12);
+        }
 
         &:hover {
             background: rgba(22, 23, 35, 0.03);
@@ -29,6 +33,8 @@
     position: relative;
     height: 50px;
     margin-top: -8px;
+    cursor: default;
+    user-select: none;
 }
 
 .back-btn {
@@ -36,12 +42,18 @@
     height: 100%;
     background-color: transparent;
     font-size: 1.2rem;
+    font-weight: 600;
     cursor: pointer;
+
+    &:hover {
+        background: rgba(22, 23, 35, 0.03);
+    }
 }
 
 .header-title {
     position: absolute;
     top: 50%;
     left: 50%;
+    font-size: 1.2rem;
     transform: translate(-50%, -50%);
 }
