--- a/src/components/Layouts/components/Search/Search.module.scss
+++ b/src/components/Layouts/components/Search/Search.module.scss
@@ -64,11 +64,6 @@
     &:active {
         color: rgba(22, 24, 35, 0.5);
     }
-
-    .loading,
-    .clear {
-        display: none;
-    }
 }
 
 .search-btn {
@@ -87,6 +82,19 @@
 
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
+    }
+}
+
+.loading {
+    animation: spinner 0.8s linear infinite;
+}
+
+@keyframes spinner {
+    from {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(360deg);
     }
 }
 
