--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -5,11 +5,16 @@
     --search-font-size-icon: 1.3rem;
     --search-button-width: 52px;
     --search-font-size-text: 1rem;
+    position: fixed;
+    top: 0px;
+    left: 0px;
     width: 100%;
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
     justify-content: center;
+    background-color: #fff;
+    z-index: 10;
 }
 
 .inner {
