--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -52,10 +52,11 @@
     background-color: transparent;
     font-size: 1.2rem;
     font-weight: 600;
+    color: rgba(22, 23, 35, 0.2);
     cursor: pointer;
 
     &:hover {
-        background: rgba(22, 23, 35, 0.03);
+        color: rgba(22, 23, 35, 0.8);
     }
 }
 
