--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -31,18 +31,17 @@ body {
 }
 
 // Scrollbar CSS
-
-::-webkit-scrollbar {
+html *::-webkit-scrollbar {
     border-radius: 0;
     width: 8px;
 }
 
-::-webkit-scrollbar-thumb {
+html *::-webkit-scrollbar-thumb {
     border-radius: 4px;
-    background-color: rgba(0, 0, 0, 0.15);
+    background-color: rgba(22, 24, 35, 0.06);
 }
 
-::-webkit-scrollbar-track {
+html *::-webkit-scrollbar-track {
     border-radius: 0;
     background-color: rgba(0, 0, 0, 0);
 }
