--- a/src/components/AccountItem/AccountItem.module.scss
+++ b/src/components/AccountItem/AccountItem.module.scss
@@ -33,7 +33,7 @@
     color: rgba(32, 213, 236, 0.5);
 }
 
-.usename {
+.username {
     font-size: calc(var(--search-font-size) * 95 / 100);
     color: rgba(22, 24, 35, 0.5);
 }
