--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -99,7 +99,7 @@
         text-align: center;
         height: 20px;
         width: 30px;
-        background-color: rgb(218, 52, 52);
+        background-color: var(--primary);
         font-size: 0.8rem;
         font-weight: 600;
         color: #fff;
