--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -6,7 +6,7 @@
     --while: #fff;
     --text-color: rgba(22, 24, 35);
 
-    //Defaut layout
+    //Default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
     --default-layout-horizontal-spacer: 24px;
