--- a/src/layouts/components/Sidebar/Menu/Menu.module.scss
+++ b/src/layouts/components/Sidebar/Menu/Menu.module.scss
@@ -1,8 +1,12 @@
+.wrapper {
+    margin-bottom: 10px;
+}
+
 .menu-item {
     display: flex;
     align-items: center;
-    padding: 8px;
-    font-size: 1.4rem;
+    padding: 9px;
+    font-size: 1.3rem;
     font-weight: 700;
     border-radius: 4px;
 
